--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "aws-sdk": "^2.1313.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "eslint": "8.33.0",
