--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "aws-sdk": "^2.1313.0",
+    "axios": "^1.3.3",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "eslint": "8.33.0",
@@ -23,9 +24,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-recaptcha-v3": "^1.10.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
