--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.14",
     "@next/font": "^13.1.6",
+    "@react-google-maps/api": "^2.18.1",
+    "@types/google.maps": "^3.52.0",
     "@types/node": "18.13.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
